feat: day03 - first puzzle

--- a/Day03/pom.xml
+++ b/Day03/pom.xml
@@ -5,20 +5,26 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>fr.kwaaac.aoc</groupId>
-    <artifactId>AOC2024</artifactId>
+    <artifactId>Day03</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>Day01</module>
-        <module>Day02</module>
-        <module>Day03</module>
-    </modules>
 
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
         <maven.compiler.target>23</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>23</source>
+                    <target>23</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
